# riscv-assembler

./: .gitignore  README.md  pyproject.toml  setup.py
riscv_assembler/: __init__.py  convert.py  prjtest.py  project_convert.py  utils.py
tests/: test_class.py  test_utils.py
